# dome

./: .env.sample  .gitignore  .gitmodules  README.md  docker-compose.yml  init.sql
api/: Dockerfile  app.py  cache.py  db.py  openapi.py  pyproject.toml  schema.py  utils.py
api/controllers/v1/: health_check.py  measurements.py  sensor_data.py
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.js  index.js
app/src/pages/: cadastro.js  dados.js  home.js  login.js  sobre.js
app/src/styles/: theme.js
broker_mqtt/: mosquitto.conf
data-generation/: Dockerfile  generate.py  load_data.sh
docs/: openapi.yml  sensor_exposure_v1.json  sensor_measurement_v1.json
gateway/: main.py
mobile/mApp/: app.json  package-lock.json  package.json
mobile/mApp/app/: dados.tsx
mobile/mApp/app/(tabs)/: _layout.tsx  cadastro.tsx  index.tsx
mobile/mApp/components/: HelloWave.tsx
mobile/mApp/components/ui/: IconSymbol.tsx
mobile/mApp/constants/: Colors.ts
